Updating to prevent CLS shifts, general QOL changes...

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,7 @@
 *{
     font-family: 'Barlow', sans-serif;
 }
+
+html{
+    overflow-x: hidden;
+}
