--- a/src/components/firstScrollBanner/carCaro.css
+++ b/src/components/firstScrollBanner/carCaro.css
@@ -1,3 +1,12 @@
+.desktopPic{
+    aspect-ratio: 128/53;
+}
+
+.mobilePic{
+    aspect-ratio: 47/54 !important;
+}
+
+
 .carousel .carousel-control-prev{
     color: white;
     background-color: rgba(0, 0, 0, 0.713);
